<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".FirstActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:text="@string/kalkulator"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingHorizontal="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/angka1"/>

            <View
                android:layout_width="10dp"
                android:layout_height="1dp"/>

            <EditText
                android:id="@+id/angka1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:hint="@string/hint_angka1"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/angka2"/>

            <View
                android:layout_width="10dp"
                android:layout_height="1dp"/>

            <EditText
                android:id="@+id/angka2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:hint="@string/hint_angka2"
                android:inputType="numberDecimal"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnTambah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/btnTambah" />

            <Button
                android:id="@+id/btnKurang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/btnKurang" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnKali"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/btnKali" />
            <Button
                android:id="@+id/btnBagi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/btnBagi" />
        </LinearLayout>
        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/btnClear" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingHorizontal="5dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:text="@string/hasil"/>
        <TextView
            android:id="@+id/hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:text=""/>
    </LinearLayout>
</LinearLayout>
